--- a/password-validator/Makefile
+++ b/password-validator/Makefile
@@ -79,6 +79,6 @@ PasswordValidator : PasswordValidatorTest.o PasswordValidator.o gtest.a gtest_ma
 docker-build:
 	docker build . -t gcc-googletest
 docker-run:
-	docker run -v $(shell pwd):/opt/project -w /opt/project gcc-googletest ./run-once.sh
+	docker run -v ${PWD}:/opt/project -w /opt/project gcc-googletest ./run-once.sh
 docker-windows-run:
 	docker run -v %cd%:/opt/project -w /opt/project gcc-googletest ./run-once.sh
