resolve /home/hchinchilla/workspace/codium/trainings/tdd/tdd-training-cpp/fizz-buzz at runtime

--- a/fizz-buzz/Makefile
+++ b/fizz-buzz/Makefile
@@ -79,6 +79,6 @@ FizzBuzz : FizzBuzzTest.o FizzBuzz.o gtest.a gtest_main.a
 docker-build:
 	docker build . -t gcc-googletest
 docker-run:
-	docker run -v ${PWD}:/opt/project -w /opt/project gcc-googletest ./run-once.sh
+	docker run -v $${PWD}:/opt/project -w /opt/project gcc-googletest ./run-once.sh
 docker-windows-run:
 	docker run -v %cd%:/opt/project -w /opt/project gcc-googletest ./run-once.sh
