--- a/password-validator/Makefile
+++ b/password-validator/Makefile
@@ -77,8 +77,8 @@ PasswordValidator : PasswordValidatorTest.o PasswordValidator.o gtest.a gtest_ma
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -pthread $^ -o $@
 
 docker-build:
-	docker build . -t gcc-googletest
+	docker build . -t codiumteam/tdd-training-cpp:password-validator
 docker-run:
-	docker run -v ${PWD}:/opt/project -w /opt/project gcc-googletest ./run-once.sh
+	docker run -v ${PWD}:/opt/project -w /opt/project codiumteam/tdd-training-cpp:password-validator ./run-once.sh
 docker-windows-run:
-	docker run -v %cd%:/opt/project -w /opt/project gcc-googletest ./run-once.sh
+	docker run -v %cd%:/opt/project -w /opt/project codiumteam/tdd-training-cpp:password-validator ./run-once.sh
