--- a/coffee-machine/Makefile
+++ b/coffee-machine/Makefile
@@ -1,12 +1,15 @@
 default: docker-run
 
-all:
-	cmake -S . -O cmake-build-debug/
-	cmake --build cmake-build-debug --target all -j 12
-	./cmake-build-debug/tst/coffee_machine_tst
+run-tests:
+	cd build && cmake ..
+	cd build && cmake --build .
+	./build/tst/coffee_machine_tst
+
+download-deps:
+	git clone https://github.com/google/googletest lib/googletest
 
 docker-build:
 	docker build . -t codiumteam/tdd-training-cpp:coffee-machine
 
 docker-run:
-	docker run -v ${PWD}:/opt/project -w /opt/project codiumteam/tdd-training-cpp:coffee-machine ./run-once.sh
+	docker run -v ${PWD}:/codium codiumteam/tdd-training-cpp:coffee-machine make run-tests
