coffee-machine: google test is included in CMakeLists.txt

--- a/coffee-machine/Dockerfile
+++ b/coffee-machine/Dockerfile
@@ -5,7 +5,4 @@ RUN apt-get update && apt-get -y install cmake
 
 WORKDIR /codium
 
-COPY Makefile .
-RUN make download-deps
-
-VOLUME ["/codium", "/codium/lib"]
+VOLUME ["/codium"]
