add make clean as a target

--- a/coffee-machine/Makefile
+++ b/coffee-machine/Makefile
@@ -5,5 +5,8 @@ run:
 	cd build && cmake --build .
 	./build/test/coffee_machine_test
 
+clean:
+	rm -rf build/*
+
 docker-run:
 	docker run -v ${PWD}:/codium codiumteam/tdd-training-cpp make run
