--- a/fizz-buzz/Makefile
+++ b/fizz-buzz/Makefile
@@ -5,5 +5,8 @@ run:
 	cd build && cmake --build .
 	./build/test/fizz_buzz_test
 
+clean:
+	rm -rf build/*
+
 docker-run:
 	docker run -v ${PWD}:/codium codiumteam/tdd-training-cpp make run
