--- a/password-validator/Makefile
+++ b/password-validator/Makefile
@@ -5,5 +5,8 @@ run:
 	cd build && cmake --build .
 	./build/test/password_validator_test
 
+clean:
+	rm -rf build/*
+
 docker-run:
 	docker run -v ${PWD}:/codium codiumteam/tdd-training-cpp make run
