--- a/print-date/Makefile
+++ b/print-date/Makefile
@@ -5,5 +5,8 @@ run:
 	cd build && cmake --build .
 	./build/test/print_date_test
 
+clean:
+	rm -rf build/*
+
 docker-run:
 	docker run -v ${PWD}:/codium codiumteam/tdd-training-cpp make run
